--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
  
   <groupId>Web</groupId>
-  <artifactId>JSPprojectArtifact</artifactId>
+  <artifactId>JSPproject</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>JSPproject</name>
   <packaging>war</packaging>
-  <!-- <packaging>jar</packaging> -->
 
   <build>
     <plugins>
