--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,16 @@
 	        <artifactId>hamcrest-all</artifactId>
 	      	<version>1.3</version>
        </dependency>
-	<dependency>
+      <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+      <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <version>1.2</version>
+      </dependency>
+      <dependency>
 	    <groupId>javaee</groupId>
 	    <artifactId>javaee-api</artifactId>
+        <scope>provided</scope>
 	    <version>5</version>
 	</dependency>
 	<dependency>
