--- a/pom.xml
+++ b/pom.xml
@@ -42,30 +42,12 @@
   <version>3.0.0</version>
   <type>maven-plugin</type>
     </dependency> 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
+     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
-        <dependency>
-    	    <groupId>org.hamcrest</groupId>
-	        <artifactId>hamcrest-all</artifactId>
-	      	<version>1.3</version>
-       </dependency>
-      <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
-      <dependency>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-          <version>1.2</version>
-      </dependency>
-      <dependency>
+    <dependency>
 	    <groupId>javaee</groupId>
 	    <artifactId>javaee-api</artifactId>
         <scope>provided</scope>
@@ -77,22 +59,24 @@
 	    <version>6.0</version>
 	    <scope>provided</scope>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>1.7.22</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-simple</artifactId>
-		<version>1.7.22</version>
-	</dependency>
-      <dependency>
-          <groupId>org.apache.xbean</groupId>
-          <artifactId>xbean-reflect</artifactId>
-          <version>3.4</version>
-      </dependency>
+        <!-- start add testing-->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.8.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>1.3</version>
+    </dependency>
+      <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+    <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>1.10.19</version>
+    </dependency>
+      <!-- stop add testing-->
   </dependencies>
 </project>
