--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 	    <version>6.0</version>
 	    <scope>provided</scope>
 	</dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.21</version>
+      </dependency>
         <!-- start add testing-->
     <dependency>
         <groupId>junit</groupId>
