--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>-->
 
-    <servlet>
+<!--    <servlet>
         <servlet-name>JsonController</servlet-name>
         <servlet-class>servlets.JsonController</servlet-class>
     </servlet>
@@ -25,5 +25,5 @@
     <servlet-mapping>
         <servlet-name>JsonController</servlet-name>
         <url-pattern>/json</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
 </web-app>
