--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
           <artifactId>standard</artifactId>
           <version>1.1.2</version>
       </dependency>
+      <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <version>1.1.3</version>
+      </dependency>
       <!-- end for JTLS -->
       <dependency>
   <groupId>org.apache.maven.plugins</groupId>
