--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,17 @@
           <artifactId>slf4j-log4j12</artifactId>
           <version>1.7.21</version>
       </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.22</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.7.22</version>
+      </dependency>
         <!-- start add testing-->
     <dependency>
         <groupId>junit</groupId>
