--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,10 +11,18 @@
         <servlet-name>UsersController</servlet-name>
         <servlet-class>servlets.UsersController</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>UsersController</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserEdit</servlet-name>
+        <servlet-class>servlets.UserEdit</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserEdit</servlet-name>
+        <url-pattern>/user/edit.do</url-pattern>
     </servlet-mapping>
 
 <!--    <servlet>
