--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>UserEdit</servlet-name>
-        <url-pattern>/user/edit.do</url-pattern>
+        <url-pattern>/users/edit.do</url-pattern>
     </servlet-mapping>
 
 <!--    <servlet>
