--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,14 @@
         <servlet-name>UserEdit</servlet-name>
         <url-pattern>/users/edit.do</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>UserDel</servlet-name>
+        <servlet-class>servlets.UserDel</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserDel</servlet-name>
+        <url-pattern>/users/del.do</url-pattern>
+    </servlet-mapping>
 
 <!--    <servlet>
         <servlet-name>JsonController</servlet-name>
