--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+<!--<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
     http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
+         version="2.4">-->
+
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xmlns="http://java.sun.com/xml/ns/javaee"
+             xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+             xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+             id="WebApp_ID" version="3.0">
 
     <display-name>JSPproject</display-name>
 
@@ -13,7 +20,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>UsersController</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/users/UsersView.jsp</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -49,7 +56,7 @@
         <url-pattern>/users/showpets.do</url-pattern>
     </servlet-mapping>
 
-    addpet.do
+
 
 <!--    <servlet>
         <servlet-name>JsonController</servlet-name>
