--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,24 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>InputClientServlet</servlet-name>
+        <servlet-class>servlets.InputClientServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>InputClientServlet</servlet-name>
+        <url-pattern>/client.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>servlets.Login</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/login.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>UserEdit</servlet-name>
         <servlet-class>servlets.UserEdit</servlet-class>
     </servlet>
@@ -58,6 +76,10 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     <servlet>
         <servlet-name>DelPet</servlet-name>
         <servlet-class>servlets.DelPet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>InputClient</servlet-name>
+        <servlet-class>servlets.InputClientServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>DelPet</servlet-name>
