--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     </servlet>
     <servlet-mapping>
         <servlet-name>UsersController</servlet-name>
-        <url-pattern>/users/UsersView.jsp</url-pattern>
+        <url-pattern>/users/UsersView.do</url-pattern>
     </servlet-mapping>
 
     <servlet>
