--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
           <artifactId>hamcrest-all</artifactId>
           <version>1.3</version>
     </dependency>
+     <!-- Add database-->
+    <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>9.4.1212</version>
+    </dependency>
       <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
     <dependency>
           <groupId>org.mockito</groupId>
